[package]
name = "rusty-knobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[[bin]]
name = "rusty-knobs"
path = "src/main.rs"
